<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.devoir.footsen.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
    </fragment>

    <fragment
        android:id="@+id/nav_stadium"
        android:name="com.devoir.footsen.StadiumActivity"
        android:label="@string/stadiums"
        tools:layout="@layout/activity_stadium"/>
    <fragment
        android:id="@+id/nav_team"
        android:name="com.devoir.footsen.TeamsActivity"
        android:label="@string/team"
        tools:layout="@layout/activity_teams"/>
    <fragment
        android:id="@+id/nav_matches"
        android:name="com.devoir.footsen.MactchActivity"
        android:label="@string/matches"
        tools:layout="@layout/activity_mactch"/>

    <fragment
        android:id="@+id/nav_help"
        android:name="com.devoir.footsen.HelpActivity"
        android:label="Help"
        tools:layout="@layout/activity_help"/>


</navigation>